# huanshu

./: .gitignore  CLAUDE.md  README.md  SETUP.md  iconify.ts  index.html  package.json  uno.config.ts  vite.config.ts
.claude/: settings.local.json
fixtures/: all-layout-blueprints.json
scripts/: generate_brand_assets.py
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: config.rs  crypto.rs  db.rs  embedded_icons.rs  icon.rs  input.rs  lib.rs  lmstudio.rs  main.rs  render.rs  types.rs  validate.rs
src-tauri/src/commands/: generate.rs  mod.rs  projects.rs  settings.rs  storage.rs
src-tauri/src/generator/: audit.rs  icons.rs  mod.rs  normalize.rs  planning.rs  slides.rs  utils.rs
src/components/: BrandMark.vue  CardGrid.vue  ExportDialog.vue  GlassCard.vue  ImageCarousel.vue  InfographicCanvas.vue  KeynoteCenterGridSlide.vue  KeynoteClosingSlide.vue  KeynoteCompareSlide.vue  KeynoteCoverSlide.vue  KeynoteFeatureGridSlide.vue  KeynoteFocusExampleSlide.vue  KeynoteInfographicSlide.vue  KeynoteIssueStackSlide.vue  KeynoteOutcomeGridSlide.vue  KeynoteOverviewSlide.vue  KeynoteProcessSlide.vue  KeynoteSectionIntroSlide.vue  KeynoteSectionListSlide.vue  KeynoteSplitLayersSlide.vue  KeynoteSpotlightSlide.vue  KeynoteStepFlowSlide.vue  KeynoteSwotSlide.vue  KeynoteTimelineSlide.vue  MarkdownWorkbench.vue  PasswordDialog.vue  PipelineProgress.vue  SkeletonCard.vue  SlideCard.vue  types.ts  (+7 more)
(+14 files in other folders)
